--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -2,29 +2,45 @@
   <div class="container portfolio-flex-grid">
     <div class="row">     
 <div class="col-lg-11">
-        <figure><img src="img/portfolio/Woodland-Jam.jpg" class="img-responsive img-centered" alt="Woodland Jam"><figcaption>Woodland Jam</figcaption></figure>
+        <a href="#portfolioModal-1" class="portfolio-link" data-toggle="modal"><figure><img src="img/portfolio/Woodland-Jam.jpg" class="img-responsive img-centered" alt="Woodland Jam"><figcaption>Woodland Jam</figcaption></figure></a>
 </div>   
 <div class="col-12 col-md-7">
-        <figure><img src="img/portfolio/Cat-Cafe.jpg" class="img-responsive img-centered" alt="Cat Café"><figcaption>Cat Café</figcaption></figure>
+        <a href="#portfolioModal-2" class="portfolio-link" data-toggle="modal"><figure><img src="img/portfolio/Cat-Cafe.jpg" class="img-responsive img-centered" alt="Cat Café"><figcaption>Cat Café</figcaption></figure></a>
       </div>
         <div class="col-6 col-md-4">
-        <figure><img src="img/portfolio/Plein-Air-Painters.jpg" class="img-responsive img-centered" alt="Plein Air Painters"><figcaption>Plein Air Painters</figcaption></figure>
+        <a href="#portfolioModal-3" class="portfolio-link" data-toggle="modal"><figure><img src="img/portfolio/Plein-Air-Painters.jpg" class="img-responsive img-centered" alt="Plein Air Painters"><figcaption>Plein Air Painters</figcaption></figure></a>
       </div>
     </div>
     <div class="portfolio-flex-row">
       <div class="col-12 col-md-4">
-        <figure><img src="img/portfolio/Through-the-Trees.jpg" class="img-responsive" alt="Through the Trees"><figcaption>Through the Trees</figcaption></figure>
+        <a href="#portfolioModal-4" class="portfolio-link" data-toggle="modal"><figure><img src="img/portfolio/Through-the-Trees.jpg" class="img-responsive" alt="Through the Trees"><figcaption>Through the Trees</figcaption></figure></a>
         </div>
       <div class="col-12 col-md-4">
-          <figure><img src="img/portfolio/Winter-Friends.jpg" class="img-responsive" alt="Winter Friends"><figcaption>Winter Friends</figcaption></figure>
+          <a href="#portfolioModal-5" class="portfolio-link" data-toggle="modal"><figure><img src="img/portfolio/Winter-Friends.jpg" class="img-responsive" alt="Winter Friends"><figcaption>Winter Friends</figcaption></figure></a>
       </div>
       <div class="col-12 col-md-4">
-          <figure><img src="img/portfolio/Home.jpg" class="img-responsive" alt="Home"><figcaption>Home</figcaption></figure>
+          <a href="#portfolioModal-6" class="portfolio-link" data-toggle="modal"><figure><img src="img/portfolio/Home.jpg" class="img-responsive" alt="Home"><figcaption>Home</figcaption></figure></a>
       </div>
         <div class="col-12 col-md-8">
-        <figure><img src="img/portfolio/Day-at-the-Beach.jpg" class="img-responsive img-centered" alt="Day at the Beach"><figcaption>Day at the Beach</figcaption></figure>
-      </div><div class="col-12 col-md-4"><figure><img src="img/portfolio/The-Lilac-Bush.jpg" class="img-responsive" alt="The Lilac Bush"><figcaption>The Lilac Bush</figcaption>
-    </figure></div>
-      <div class="col-md-6"><figure><img src="img/portfolio/The-Haircut.jpg" class="img-responsive" alt="The Haircut"><figcaption>The Haircut</figcaption></figure></div><div class="col-md-6"><figure><img src="img/portfolio/A-Stellar-Dream.jpg" class="img-responsive" alt="A Stellar Dream"><figcaption>A Stellar Dream</figcaption></figure></div>
-      <div class="col-md-1"></div><div class="col-md-7"><figure><img src="img/portfolio/Something's-Fishy.jpg" class="img-responsive" alt="Something's Fishy"><figcaption>Something's Fishy</figcaption></figure></div><div class="col-md-3"><figure><img src="img/portfolio/Blanket-Bunny.jpg" class="img-responsive" alt="Blanket Bunny"><figcaption>Blanket Bunny</figcaption></figure></div><div class="col-md-1"></div></div>
+        <a href="#portfolioModal-7" class="portfolio-link" data-toggle="modal"><figure><img src="img/portfolio/Day-at-the-Beach.jpg" class="img-responsive img-centered" alt="Day at the Beach"><figcaption>Day at the Beach</figcaption></figure></a>
+      </div><div class="col-12 col-md-4">
+        <a href="#portfolioModal-8" class="portfolio-link" data-toggle="modal"><figure><img src="img/portfolio/The-Lilac-Bush.jpg" class="img-responsive" alt="The Lilac Bush"><figcaption>The Lilac Bush</figcaption></figure></a>
+      </div>
+      <div class="col-md-6">
+        <a href="#portfolioModal-9" class="portfolio-link" data-toggle="modal"><figure><img src="img/portfolio/The-Haircut.jpg" class="img-responsive" alt="The Haircut"><figcaption>The Haircut</figcaption></figure></a>
+      </div>
+      <div class="col-md-6">
+        <a href="#portfolioModal-10" class="portfolio-link" data-toggle="modal"><figure><img src="img/portfolio/A-Stellar-Dream.jpg" class="img-responsive" alt="A Stellar Dream"><figcaption>A Stellar Dream</figcaption></figure></a>
+      </div>
+      <div class="col-md-1">
+      </div>
+      <div class="col-md-7">
+        <a href="#portfolioModal-11" class="portfolio-link" data-toggle="modal"><figure><img src="img/portfolio/Something's-Fishy.jpg" class="img-responsive" alt="Something's Fishy"><figcaption>Something's Fishy</figcaption></figure></a>
+      </div>
+      <div class="col-md-3">
+        <a href="#portfolioModal-12" class="portfolio-link" data-toggle="modal"><figure><img src="img/portfolio/Blanket-Bunny.jpg" class="img-responsive" alt="Blanket Bunny"><figcaption>Blanket Bunny</figcaption></figure></a>
+      </div>
+      <div class="col-md-1">
+      </div>
+    </div>
 </div></section>
