--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -324,12 +324,32 @@ section.success {
     z-index: 2;
 }
 
+.portfolio-link:hover, .portfolio-link:focus, .portfolio-link:active {
+  text-decoration: none;
+} 
+
 figure {
   border: solid 10px white;
   box-shadow: 3px 3px 3px lightgray;
   background-color: white;
   margin-bottom: 20px;
   max-width: 100%;
+}
+
+#portfolio figure {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+}
+
+#portfolio figure:hover, #portfolio figure:focus, #portfolio  figure:active {
+  -webkit-transform: rotate(1.7deg);
+  transform: rotate(1.7deg);
 }
 
 @media(min-width:767px) {
@@ -562,7 +582,7 @@ footer .footer-below {
 }
 
 .portfolio-modal .modal-content {
-    padding: 25px 0;
+    padding: 100px 0;
     min-height: 100%;
     border: 0;
     border-radius: 0;
@@ -579,7 +599,10 @@ footer .footer-below {
 }
 
 .portfolio-modal .modal-content img {
-margin-bottom: 30px;
+  border: 15px solid white;
+  max-width: 100%;
+  padding-bottom: 50px;
+  background-color: white;
 }
 
 .portfolio-modal .modal-content .item-details {
